--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "bootstrap": "^5.2.1",
+    "font-awesome": "^4.7.0",
     "gatsby": "^4.23.0",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-image": "^2.23.0",
@@ -25,7 +27,8 @@
     "react-dom": "^18.1.0"
   },
   "devDependencies": {
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "sass": "^1.54.9"
   },
   "repository": {
     "type": "git",
